# cargo-update-installed

./: Cargo.toml
src/: main.rs  package_data.rs
