[package]
name = "cargo-update-installed"
version = "0.1.0"
authors = ["Allen Wild <allenwild93@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
atty = "0.2.14"
clap = "3.0.0-beta.2"
dirs = "3.0.1"
glob = "0.3.0"
lazy_static = "1.4.0"
regex = "1.4.3"
rustversion = "1.0.4"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
termcolor = "1.1.2"
url = "2.2.1"
