[package]
name = "cargo-update-installed"
version = "0.3.0"
authors = ["Allen Wild <allenwild93@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.1", features = ["cargo", "deprecated", "derive", "wrap_help"] }
dirs = "4"
glob = "0.3"
is-terminal = "0.4"
once_cell = "1"
regex = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termcolor = "1.1"
url = "2.2"
